# spongebob-cli

./: pyproject.toml
spongebob_cli/: __main__.py  main.py
